datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearch"]
  output          = "../src/generated/client"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum UserRole {
  ADMIN
  USER
}

model User {
  id   Int       @id @default(autoincrement())
  uids UserUID[]

  email   String  @unique
  name    String?
  picture String?

  tags String[]

  locked Boolean @default(false)

  lastOnline DateTime?

  role UserRole @default(USER)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  groups Group[]

  projects Project[]

  actions Action[]

  modelStates ModelState[]

  aliases UserEmailAlias[]
}

model UserEmailAlias {
  email String @id

  userId Int
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}

model UserUID {
  uid String @id

  user   User? @relation(fields: [userId], references: [id])
  userId Int?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Group {
  id Int @id @default(autoincrement())

  code  String @unique
  label String

  tags String[]

  users User[]

  projects Project[]

  flags GroupFlags?

  challenges Challenge[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model GroupFlags {
  id Int @id @default(autoincrement())

  readProjectActions     Boolean @default(false)
  readProjectModelStates Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  group   Group @relation(fields: [groupId], references: [id])
  groupId Int   @unique
}

model Project {
  id Int @id @default(autoincrement())

  code  String @unique
  label String

  users  User[]
  groups Group[]

  domains Domain[]
  topics  Topic[]

  content Content[]

  actions Action[]

  polls      Poll[]
  challenges Challenge[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Domain {
  id Int @id @default(autoincrement())

  code  String @unique
  label String

  projects Project[]

  kcs KC[]

  modelStates ModelState[]

  kcRelations KcRelation[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Topic {
  id Int @id @default(autoincrement())

  code  String @unique
  label String

  sortIndex Int?

  tags String[]

  project   Project @relation(fields: [projectId], references: [id])
  projectId Int

  parent    Topic?  @relation("TopicToTopic", fields: [parentId], references: [id])
  parentId  Int?
  childrens Topic[] @relation("TopicToTopic")

  content Content[]

  kcs KC[]

  actions Action[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  challenges Challenge[]

  @@index([id, projectId])
}

model KC {
  id Int @id @default(autoincrement())

  code  String @unique
  label String

  domain   Domain @relation(fields: [domainId], references: [id])
  domainId Int

  topics Topic[]

  content Content[]

  actions Action[]

  kcARelations KcRelation[] @relation(name: "kcA")
  kcBRelations KcRelation[] @relation(name: "kcB")

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model KcRelation {
  id Int @id @default(autoincrement())

  relation String

  domain   Domain @relation(fields: [domainId], references: [id])
  domainId Int

  label   String?
  comment String?

  kcA   KC  @relation(fields: [kcAId], references: [id], name: "kcA", onDelete: Cascade)
  kcAId Int

  kcB   KC  @relation(fields: [kcBId], references: [id], name: "kcB", onDelete: Cascade)
  kcBId Int

  @@unique([kcAId, kcBId, relation])
  @@index([domainId])
  @@index([relation, domainId])
  @@index([kcAId])
  @@index([kcBId])
}

model ActionVerb {
  id Int @id @default(autoincrement())

  name String @unique

  actions Action[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Action {
  id Int @id @default(autoincrement())

  verb     ActionVerb @relation(fields: [verbName], references: [name])
  verbName String

  timestamp DateTime

  result Float?

  project   Project @relation(fields: [projectId], references: [id])
  projectId Int

  user   User? @relation(fields: [userId], references: [id])
  userId Int?

  poll   Poll? @relation(fields: [pollId], references: [id])
  pollId Int?

  challenge   Challenge? @relation(fields: [challengeId], references: [id])
  challengeId Int?

  content   Content? @relation(fields: [contentId], references: [id])
  contentId Int?

  topic   Topic? @relation(fields: [topicId], references: [id])
  topicId Int?

  kcs KC[]

  stepID String?
  hintID String?

  amount Float?

  detail String?

  extra Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Content {
  id Int @id @default(autoincrement())

  code  String @unique
  label String

  sortIndex Int?

  tags String[]

  project   Project @relation(fields: [projectId], references: [id])
  projectId Int

  topics Topic[]

  kcs KC[]

  actions Action[]

  challenges Challenge[]

  description String

  binary         Bytes?
  binaryFilename String?

  json Json?
  url  String?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model ModelStateType {
  id Int @id @default(autoincrement())

  name String @unique

  states ModelState[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model ModelStateCreator {
  id Int @id @default(autoincrement())

  name String @unique

  states ModelState[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model ModelState {
  id Int @id @default(autoincrement())

  user   User @relation(fields: [userId], references: [id])
  userId Int

  stateType ModelStateType? @relation(fields: [type], references: [name])
  type      String?

  stateCreator ModelStateCreator @relation(fields: [creator], references: [name])
  creator      String

  domain   Domain @relation(fields: [domainId], references: [id])
  domainId Int

  json Json

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model Poll {
  id Int @id @default(autoincrement())

  code String @unique

  title String

  enabled Boolean @default(true)

  description String?

  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  projectId Int

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  tags String[]

  items PollItem[]

  actions Action[]
}

model PollItem {
  id Int @id @default(autoincrement())

  index Int

  tags String[]

  poll   Poll @relation(fields: [pollId], references: [id], onDelete: Cascade)
  pollId Int

  content Json

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@unique([index, pollId])
}

model Challenge {
  id Int @id @default(autoincrement())

  code String @unique

  title       String
  description String?

  enabled Boolean @default(true)

  tags String[]

  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  projectId Int

  startDate DateTime?
  endDate   DateTime?

  topics Topic[]

  content Content[]

  groups Group[]

  actions Action[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}
