//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  uids UserUID [not null]
  email String [unique, not null]
  name String
  picture String
  tags String[] [not null]
  locked Boolean [not null, default: false]
  lastOnline DateTime
  role UserRole [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  groups Group [not null]
  projects Project [not null]
  actions Action [not null]
  modelStates ModelState [not null]
  aliases UserEmailAlias [not null]
}

Table UserEmailAlias {
  email String [pk]
  userId Int [not null]
  user User [not null]
}

Table UserUID {
  uid String [pk]
  user User
  userId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Group {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  tags String[] [not null]
  users User [not null]
  projects Project [not null]
  flags GroupFlags
  challenges Challenge [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table GroupFlags {
  id Int [pk, increment]
  readProjectActions Boolean [not null, default: false]
  readProjectModelStates Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  group Group [not null]
  groupId Int [unique, not null]
}

Table Project {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  users User [not null]
  groups Group [not null]
  domains Domain [not null]
  topics Topic [not null]
  content Content [not null]
  actions Action [not null]
  polls Poll [not null]
  challenges Challenge [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Domain {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  projects Project [not null]
  kcs KC [not null]
  modelStates ModelState [not null]
  kcRelations KcRelation [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Topic {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  sortIndex Int
  tags String[] [not null]
  project Project [not null]
  projectId Int [not null]
  parent Topic
  parentId Int
  childrens Topic [not null]
  content Content [not null]
  kcs KC [not null]
  actions Action [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  challenges Challenge [not null]
}

Table KC {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  domain Domain [not null]
  domainId Int [not null]
  topics Topic [not null]
  content Content [not null]
  actions Action [not null]
  kcARelations KcRelation [not null]
  kcBRelations KcRelation [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table KcRelation {
  id Int [pk, increment]
  relation String [not null]
  domain Domain [not null]
  domainId Int [not null]
  label String
  comment String
  kcA KC [not null]
  kcAId Int [not null]
  kcB KC [not null]
  kcBId Int [not null]

  indexes {
    (kcAId, kcBId, relation) [unique]
  }
}

Table ActionVerb {
  id Int [pk, increment]
  name String [unique, not null]
  actions Action [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Action {
  id Int [pk, increment]
  verb ActionVerb [not null]
  verbName String [not null]
  timestamp DateTime [not null]
  result Float
  project Project [not null]
  projectId Int [not null]
  user User
  userId Int
  poll Poll
  pollId Int
  challenge Challenge
  challengeId Int
  content Content
  contentId Int
  topic Topic
  topicId Int
  kcs KC [not null]
  stepID String
  hintID String
  amount Float
  detail String
  extra Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Content {
  id Int [pk, increment]
  code String [unique, not null]
  label String [not null]
  sortIndex Int
  tags String[] [not null]
  project Project [not null]
  projectId Int [not null]
  topics Topic [not null]
  kcs KC [not null]
  actions Action [not null]
  challenges Challenge [not null]
  description String [not null]
  binary Bytes
  binaryFilename String
  json Json
  url String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table ModelStateType {
  id Int [pk, increment]
  name String [unique, not null]
  states ModelState [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table ModelStateCreator {
  id Int [pk, increment]
  name String [unique, not null]
  states ModelState [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table ModelState {
  id Int [pk, increment]
  user User [not null]
  userId Int [not null]
  stateType ModelStateType
  type String
  stateCreator ModelStateCreator [not null]
  creator String [not null]
  domain Domain [not null]
  domainId Int [not null]
  json Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Poll {
  id Int [pk, increment]
  code String [unique, not null]
  title String [not null]
  enabled Boolean [not null, default: true]
  description String
  project Project [not null]
  projectId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  tags String[] [not null]
  items PollItem [not null]
  actions Action [not null]
}

Table PollItem {
  id Int [pk, increment]
  index Int [not null]
  tags String[] [not null]
  poll Poll [not null]
  pollId Int [not null]
  content Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (index, pollId) [unique]
  }
}

Table Challenge {
  id Int [pk, increment]
  code String [unique, not null]
  title String [not null]
  description String
  enabled Boolean [not null, default: true]
  tags String[] [not null]
  project Project [not null]
  projectId Int [not null]
  startDate DateTime
  endDate DateTime
  topics Topic [not null]
  content Content [not null]
  groups Group [not null]
  actions Action [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table GroupToUser {
  groupsId Int [ref: > Group.id]
  usersId Int [ref: > User.id]
}

Table ProjectToUser {
  projectsId Int [ref: > Project.id]
  usersId Int [ref: > User.id]
}

Table GroupToProject {
  projectsId Int [ref: > Project.id]
  groupsId Int [ref: > Group.id]
}

Table ChallengeToGroup {
  challengesId Int [ref: > Challenge.id]
  groupsId Int [ref: > Group.id]
}

Table DomainToProject {
  domainsId Int [ref: > Domain.id]
  projectsId Int [ref: > Project.id]
}

Table ContentToTopic {
  contentId Int [ref: > Content.id]
  topicsId Int [ref: > Topic.id]
}

Table KCToTopic {
  kcsId Int [ref: > KC.id]
  topicsId Int [ref: > Topic.id]
}

Table ChallengeToTopic {
  challengesId Int [ref: > Challenge.id]
  topicsId Int [ref: > Topic.id]
}

Table ContentToKC {
  contentId Int [ref: > Content.id]
  kcsId Int [ref: > KC.id]
}

Table ActionToKC {
  actionsId Int [ref: > Action.id]
  kcsId Int [ref: > KC.id]
}

Table ChallengeToContent {
  challengesId Int [ref: > Challenge.id]
  contentId Int [ref: > Content.id]
}

Enum UserRole {
  ADMIN
  USER
}

Ref: UserEmailAlias.userId > User.id [delete: Cascade]

Ref: UserUID.userId > User.id

Ref: GroupFlags.groupId - Group.id

Ref: Topic.projectId > Project.id

Ref: Topic.parentId - Topic.id

Ref: KC.domainId > Domain.id

Ref: KcRelation.domainId > Domain.id

Ref: KcRelation.kcAId > KC.id [delete: Cascade]

Ref: KcRelation.kcBId > KC.id [delete: Cascade]

Ref: Action.verbName > ActionVerb.name

Ref: Action.projectId > Project.id

Ref: Action.userId > User.id

Ref: Action.pollId > Poll.id

Ref: Action.challengeId > Challenge.id

Ref: Action.contentId > Content.id

Ref: Action.topicId > Topic.id

Ref: Content.projectId > Project.id

Ref: ModelState.userId > User.id

Ref: ModelState.type > ModelStateType.name

Ref: ModelState.creator > ModelStateCreator.name

Ref: ModelState.domainId > Domain.id

Ref: Poll.projectId > Project.id [delete: Cascade]

Ref: PollItem.pollId > Poll.id [delete: Cascade]

Ref: Challenge.projectId > Project.id [delete: Cascade]